<resources>
    <string name="app_name">News Feed</string>
    <string name="search_hint">Enter a title</string>
    <string name="search">search</string>

    <string name="settings">Settings</string>
    <string name="settings_sectionName_key">tag</string>
    <string name="settings_sectionName_default">politics/politics</string>
    <string name="settings_sectionName_value">News Section</string>
    <string name="News_settings">News Settings</string>

    <string name="settings_from_date_default">2020-01-01</string>
    <string name="settings_from_date_key">from_date</string>
    <string name="settings_from_date_value">News From Date</string>

    <string name="settings_page_size_default">100</string>
    <string name="settings_page_size_key">page_size</string>
    <string name="settings_page_size_value">Maximum News Headlines</string>


</resources>