<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="News Category Filters">

        <EditTextPreference
            android:defaultValue="@string/settings_sectionName_default"
            android:key="@string/settings_sectionName_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="text"
            android:title="@string/settings_sectionName_value"
            android:summary="Type the tags like , environment/recycling ,
            environment/plasticbags , environment/energyefficiency"/>

        <EditTextPreference
            android:defaultValue="@string/settings_from_date_default"
            android:key="@string/settings_from_date_key"
            android:inputType="date"
            android:selectAllOnFocus="true"
            android:title="@string/settings_from_date_value"
            android:summary="Select the date from which you wanna see the news updates" />

        <EditTextPreference
            android:defaultValue="@string/settings_page_size_default"
            android:title="@string/settings_page_size_value"
            android:inputType="number"
            android:key="@string/settings_page_size_key"
            android:summary="Enter the number of news headlines"
            android:singleLine="true"
            android:selectAllOnFocus="true" />

    </PreferenceCategory>
</PreferenceScreen>